<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.madproject.spaceinvaders.activities.SpaceInvadersActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:text="@string/settings"
        android:fontFamily="serif-monospace"
        android:textColor="@color/colorSnow"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/player_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/player_name"
        android:layout_width="210dp"
        android:layout_height="43dp"
        android:text="@string/settings"
        android:maxLines="1"
        android:lines="1"
        android:maxLength="10"
        android:singleLine="true"
        android:textColor="@color/colorSnow"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="210dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:text="@string/save"
        android:background="@drawable/default_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_name"
        app:layout_constraintBottom_toTopOf="@+id/volume_button"/>

    <Button
        android:id="@+id/volume_button"
        android:layout_width="210dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:text="@string/volume_on"
        android:background="@drawable/default_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_button"
        app:layout_constraintBottom_toTopOf="@+id/language_button"/>

    <Button
    android:id="@+id/language_button"
    android:layout_width="210dp"
    android:layout_height="43dp"
    android:layout_marginBottom="24dp"
    android:text="@string/language_german"
    android:background="@drawable/default_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/volume_button"
    app:layout_constraintBottom_toTopOf="@+id/control_button"/>

    <Button
        android:id="@+id/control_button"
        android:layout_width="210dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:text="@string/activate_motion_control"
        android:background="@drawable/default_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volume_button"
        app:layout_constraintBottom_toTopOf="@+id/back_button"/>


    <Button
        android:id="@+id/back_button"
        android:layout_width="210dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:text="@string/back"
        android:background="@drawable/default_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/control_button" />

</androidx.constraintlayout.widget.ConstraintLayout>