<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space"
    tools:context="com.madproject.spaceinvaders.activities.SpaceInvadersActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:layout_marginBottom="43dp"
        android:fontFamily="serif-monospace"
        android:text="@string/app_name"
        android:textColor="@color/colorSnow"
        android:textSize="32sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/start_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="210dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:text="@string/start_game"
        android:background="@drawable/default_button"
        app:layout_constraintBottom_toTopOf="@+id/score_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="216dp"
        android:layout_height="43dp"
        android:layout_marginBottom="338dp"
        android:text="@string/settings"
        android:background="@drawable/default_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_button" />

    <Button
        android:id="@+id/score_button"
        android:layout_width="216dp"
        android:layout_height="43dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="26dp"
        android:text="@string/highscore"
        android:background="@drawable/default_button"
        app:layout_constraintBottom_toTopOf="@+id/settings_button"
        app:layout_constraintEnd_toEndOf="@+id/settings_button"
        app:layout_constraintStart_toStartOf="@+id/start_game_button"
        app:layout_constraintTop_toBottomOf="@+id/start_game_button" />

</androidx.constraintlayout.widget.ConstraintLayout>