<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/space"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:text="@string/highscore"
        android:fontFamily="serif-monospace"
        android:textColor="@color/colorSnow"
        android:textSize="32sp"
        android:layout_gravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/player_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<ListView
    android:id="@android:id/list"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="20dp"
    android:drawSelectorOnTop="false"
    android:layout_weight="0.1"
    android:textSize="8sp"/>
    <Button
        android:id="@+id/update_button"
        android:layout_width="210dp"
        android:layout_height="43dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/default_button"
        android:text="@string/show_global_score" />
    <Button
    android:id="@+id/return_button"
        android:background="@drawable/default_button"
        android:layout_margin="24dp"
        android:layout_width="210dp"
        android:layout_height="43dp"
        android:layout_gravity="center_vertical|center_horizontal"
    android:text="@string/back" />

</LinearLayout>
